--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -4,6 +4,12 @@ known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 	Lors de l'édition d'une sous opération, la sélection d'un libellé prédéfini remet le montant de la sous-opération à 0.
 
+version	0.16.6 (30/03/2014)
+improvement
+	Les comptes sont à présent triés par ordre alphabétique dans le menu "Filtre" et dans les dialogues de création/édition d'opérations.
+fix
+	Le tri alphabétique des catégories est à présent correct (ex : a est avant B). 
+
 version	0.16.5 (09/03/2014)
 improvement
 	Les outils (calculatrice et convertisseur de devise) peuvent à présent être utilisés dans les dialogues (par exemple pendant la saisie d'une opération).
