--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -4,6 +4,12 @@ known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 	When editing a subtransaction, selecting a predefined label sets the amount to 0.
 
+version	0.16.6 (03/30/2014)
+improvement
+	Accounts are now alphabetically sorted in filter menu and transaction creation/edition dialogs.
+fix
+	The alphabetical sort of categories is now correct (example : a is before B). 
+
 version	0.16.5 (03/09/2014)
 improvement
 	Tools (calculator and currency converter) can now be used in dialogs (for example while editing a transaction).
