--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -2,13 +2,14 @@ Version en cours de développement	Bug connu :	Bugs connus :	Changement :	Change
 version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
-	Lors de l'édition d'une sous opération, la sélection d'un libellé prédéfini remet le montant de la sous-opération à 0.
 
 version	0.16.7 (06/04/2014)
 fix
 	La catégorie "indéfinie" était ignorée lorsqu'on la sélectionnait dans le dialogue de filtre personnalisé.
 	Bug introduit en 0.16.6: Les opérations de catégories "indéfinie" était systématiquement ignorée quand on activait le filtrage sur les catégories.
 	Contournement d'un bug de Java 8 qui provoquait une erreur lors de l'ouverture du dialogue de création d'opération périodique.
+	Quand le bouton "Suivant" était cliqué dans le dialogue "Saisie d'opérations en rafale", le champ "Relevé" n'était jamais rempli, même lorsque l'option "Remplir automatiquement l'identifiant du libellé" était sélectionnée dans les préférences.
+	Lors de l'édition d'une sous opération, la sélection d'un libellé prédéfini remettait le montant de la sous-opération à 0.
 improvement
 	Les comptes sont à présent triés par ordre alphabétique dans le menu de l'onglet relevé de comptes.
 
