--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -2,13 +2,14 @@ Next release	Known bug:	Known bugs:	Change:	Changes:	Bug fix:	Bug fixes:
 version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
-	When editing a subtransaction, selecting a predefined label sets the amount to 0.
 
 version	0.16.7 (04/06/2014)
 fix
 	The "undefined" category was ignored when selected in the custom filter dialog.
 	Bug introduced in 0.16.6: Transactions with "Undefined" category were always ignored when using category filtering.
 	Workaround for a Java 8 bug that caused an error when opening the dialog for creating periodic transaction.
+	When the "Next" button was clicked in the "New bulk transactions" dialog, the statement field was never filled, even when in the "Auto fill the statement id" option was selected in the preferences.
+	When editing a subtransaction, selecting a predefined label set the amount to 0.
 improvement
 	Accounts are now alphabetically sorted "Account statements" tab's menu.
 
