--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -3,10 +3,14 @@ version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 
+version	0.16.8 (13/04/2014)
+fix
+	Bug introduit en 0.16.7 : Dans l'édition une sous-opération, une erreur survenait lorsqu'on effaçait le montant puis qu'on choisissait un libellé dans le menu déroulant.  
+
 version	0.16.7 (06/04/2014)
 fix
 	La catégorie "indéfinie" était ignorée lorsqu'on la sélectionnait dans le dialogue de filtre personnalisé.
-	Bug introduit en 0.16.6: Les opérations de catégories "indéfinie" était systématiquement ignorée quand on activait le filtrage sur les catégories.
+	Bug introduit en 0.16.6 : Les opérations de catégorie "indéfinie" étaient systématiquement ignorées quand on activait le filtrage sur les catégories.
 	Contournement d'un bug de Java 8 qui provoquait une erreur lors de l'ouverture du dialogue de création d'opération périodique.
 	Quand le bouton "Suivant" était cliqué dans le dialogue "Saisie d'opérations en rafale", le champ "Relevé" n'était jamais rempli, même lorsque l'option "Remplir automatiquement l'identifiant du libellé" était sélectionnée dans les préférences.
 	Lors de l'édition d'une sous opération, la sélection d'un libellé prédéfini remettait le montant de la sous-opération à 0.
@@ -621,6 +625,7 @@ fix
 version	0.3.1 (31/10/2009)
 improvement
 	L'outil de conversion des devises fonctionne à présent avec les connexions Internet par proxy et affiche à présent une table de conversion des devises.
+fix
 	Quand l'outil de conversion des devises avait été appelé, fermer la fenêtre principale n'arrêtait pas la machine virtuelle java. 
 	Les pourcentages affichés dans les bulles d'aide du camembert des dépenses nettes étaient faux.
 	Parfois, quand une opération était dupliquée ou transformée en opération périodique, l'opération créée avait un mode de paiement erroné.
