--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -3,6 +3,10 @@ version	next
 known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 
+version	0.16.8 (04/13/2014)
+fix
+	In the subtransaction editing dialog, an error occurred when you selected a predefined description after having the amount cleared.
+
 version	0.16.7 (04/06/2014)
 fix
 	The "undefined" category was ignored when selected in the custom filter dialog.
