--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -7,6 +7,8 @@ version	0.17.0 (01/05/2014)
 improvement
 	Il est à présent possible de choisir le séparateur des décimales dans l'import. Les montants précédés d'un + sont à présent acceptés.
 	Le compte sélectionné par défaut dans l'onglet "Relevés de compte" est à présent celui sélectionné dans le filtre.
+	L'assistant d'édition des opérations peut à présent proposer le montant (comportement réglable dans les préferences).
+	L'assistant d'édition des opérations est à présent désactivé lors de la modification d'une opération existante. Ceci permet d'éviter de modifier par erreur le moyen de paiement ou le montant en changeant le libellé.
 fix
 	Sous le thème Swing, la couleur de fond de la colonne "Lié à" du dialogue d'import était incorrecte.
 
