--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -7,6 +7,8 @@ version	0.17.0 (05/01/2014)
 improvement
 	It is now possible to select the decimal separator in the import dialog. Amounts preceded by a + are now accepted.
 	By default, the selected account in the "Account Statements" tab is now the one selected in the filter.
+	The transaction editing wizard can now suggest the amount (adjustable behavior in the preferences). 
+	The transaction editing wizard is now disabled when editing an existing transaction. This avoids inadvertently change the method of payment or the amount while changing the description.
 fix
 	Under Swing look and feel, the background color of "Linked to" column was wrong in import dialog.
 	
